# TermTypo

./: .gitignore  AUTOMATION.md  INTENT.md  LICENSE  PUBLISHING.md  README.md  apply_migration.py  release.bat  release.py  run.py  termtypo.spec  test_multiplayer.py
.github/workflows/: release.yml
client/: pyproject.toml  requirements.txt
client/termtypo/: __main__.py  app.py  config.py  updater.py
client/termtypo/assets/words/: common_1000.txt
client/termtypo/screens/: auth.py  home.py  leaderboard.py  matchmaking.py  mode_select.py  profile.py  race.py  race_results.py  results.py  room.py  solo.py
client/termtypo/services/: auth_service.py  matchmaking_service.py  race_service.py  supabase_client.py  word_service.py
client/termtypo/widgets/: ascii_header.py  keyboard_widget.py  typing_area.py
supabase/migrations/: 001_initial_schema.sql  002_fix_trigger.sql  003_multiplayer.sql  004_join_private_room.sql  005_fix_finish_match.sql
web/: package-lock.json  tailwind.config.ts  vercel.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/auth/callback/: route.ts
web/app/leaderboard/: page.tsx
web/app/play/: page.tsx
web/app/profile/: page.tsx
web/app/race/[matchId]/: page.tsx
web/app/ranked/: page.tsx
web/app/room/: page.tsx
web/components/: CommandPalette.tsx  KeyboardViz.tsx  NavBar.tsx  TypingTest.tsx
web/lib/supabase/: server.ts
